about-section-in-about-page

--- a/css/main.css
+++ b/css/main.css
@@ -542,9 +542,14 @@ body {
   fill: currentColor;
 }
 
+.about__content {
+  display: flex;
+  flex-direction: column;
+  gap: 75px;
+}
 @media (min-width: 1200px) {
   .about__content {
-    display: flex;
+    flex-direction: row;
     gap: 65px;
   }
 }
@@ -596,6 +601,64 @@ body {
 }
 .about__description:not(:last-child) {
   margin-bottom: 16px;
+}
+
+.about_photo-wrapper {
+  align-self: center;
+  max-width: 343px;
+}
+@media (min-width: 1200px) {
+  .about_photo-wrapper {
+    max-width: 485px;
+  }
+}
+
+.about__photo {
+  width: 100%;
+}
+
+.about__subtitle {
+  font-size: 32px;
+  font-weight: 600;
+  color: var(--dark-title-color);
+  margin-top: 75px;
+}
+
+.about__text {
+  font-size: 12px;
+  margin-top: 15px;
+}
+@media (min-width: 1200px) {
+  .about__text {
+    font-size: 14px;
+  }
+}
+
+.about-page__stats {
+  display: flex;
+  margin-top: 40px;
+  justify-content: space-between;
+}
+@media (min-width: 1200px) {
+  .about-page__stats {
+    justify-content: start;
+    gap: 64px;
+    margin-top: 50px;
+  }
+}
+
+.about-page__stat-info {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.abut-page__stat-text {
+  color: var(--dark-text-color);
+  font-family: var(--text-font);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: var(--secondary-text-line-height);
 }
 
 .stacks {
