--- a/css/main.css
+++ b/css/main.css
@@ -603,6 +603,19 @@ body {
   margin-bottom: 16px;
 }
 
+.about__title {
+  position: relative;
+}
+.about__title::after {
+  content: "";
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: #F2F3F4;
+}
+
 .about_photo-wrapper {
   align-self: center;
   max-width: 343px;
@@ -626,6 +639,7 @@ body {
 
 .about__text {
   font-size: 12px;
+  font-weight: 500;
   margin-top: 15px;
 }
 @media (min-width: 1200px) {
@@ -742,7 +756,7 @@ body {
 
 .stacks__icon {
   fill: #A7AAB4;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .stacks__icon:hover {
   fill: var(--active-link-color);
@@ -1538,4 +1552,62 @@ body {
 }
 .faq-input:checked ~ .faq-text {
   display: block;
+}
+
+.skills__skill {
+  width: 160px;
+  height: 160px;
+  position: relative;
+}
+
+.skill__outer {
+  height: 160px;
+  width: 160px;
+  padding: 20px;
+  border-radius: 50%;
+  box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15), -6px -6px 10px -1px rgba(255, 255, 255, 0.7);
+}
+
+.skill__inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+  box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.2), inset -4px -4px 6px -1px rgba(255, 255, 255, 0.7), -0.5px -0.5px 0px rgb(255, 255, 255), 0.5px 0.5px 0px rgba(0, 0, 0, 0.15), 0px 12px 10px -10px rgba(0, 0, 0, 0.05);
+}
+
+.skill__number {
+  font-size: 16px;
+  font-weight: 600;
+  color: #555;
+}
+
+circle {
+  fill: none;
+  stroke: url(#GradientColor);
+  stroke-width: 20px;
+  stroke-dasharray: 472;
+  stroke-dashoffset: 472;
+  -webkit-animation: anim 2s linear forwards;
+          animation: anim 2s linear forwards;
+}
+
+.skill__circle {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@-webkit-keyframes anim {
+  100% {
+    stroke-dashoffset: 165;
+  }
+}
+
+@keyframes anim {
+  100% {
+    stroke-dashoffset: 165;
+  }
 }/*# sourceMappingURL=main.css.map */
