--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -70,6 +70,21 @@
 
 
 /////////////////////////////////
+/// 
+.about__title {
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -40px;
+        left: 0;
+        
+        width: 100%;
+        height: 1px;
+        background: #F2F3F4;
+    }
+}
 
 .about_photo-wrapper{
     align-self: center;
@@ -94,6 +109,7 @@
 
 .about__text{
     font-size: 12px;
+    font-weight: 500;
     margin-top: 15px;
 
     @include desktop{
