--- a/sass/components/_stacks.scss
+++ b/sass/components/_stacks.scss
@@ -83,7 +83,7 @@
 .stacks__icon {
     fill: #A7AAB4;
     
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
         &:hover {
             fill: var(--active-link-color);
