--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,3 +20,4 @@
 @import './components/modal';
 @import './components/modal-form';
 @import './components/questions';
+@import './components/skills';
