--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,3 +21,4 @@
 @import './components/modal-form';
 @import './components/questions';
 @import './components/skills';
+@import './components/contact';
