--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,3 +22,4 @@
 @import './components/questions';
 @import './components/skills';
 @import './components/contact';
+@import './components/experiences';
