--- a/css/main.css
+++ b/css/main.css
@@ -323,6 +323,7 @@ body {
   color: var(--active-link-color);
 }
 .mob-nav__link--contact {
+  margin-top: 30px;
   color: var(--contact-link-color);
   display: flex;
   justify-content: center;
@@ -1132,6 +1133,7 @@ body {
 
 .footer__contact-link {
   display: flex;
+  align-items: center;
   gap: 16px;
 }
 
@@ -1617,11 +1619,124 @@ body {
     stroke-dashoffset: 165;
   }
 }
+.contact {
+  padding-top: 90px;
+  padding-bottom: 10px;
+}
+
 .contact__columns {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 40px;
+}
+@media (min-width: 1200px) {
+  .contact__columns {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+}
+
+.contact-title {
+  margin-bottom: 40px;
 }
 
 .contact__column {
-  flex-basis: 40%;
+  flex-basis: 45%;
+}
+
+.contact__list {
+  display: flex;
+  flex-direction: column;
+  gap: 42px;
+}
+
+.contact__link {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.contact__type {
+  margin-bottom: 9px;
+  font-size: 16px;
+  color: var(--dark-text-color);
+}
+
+.contact__detail {
+  color: var(--primary-text-color);
+}
+
+.contact__map iframe {
+  border: 0;
+  width: 100%;
+  height: 285px;
+}
+@media (min-width: 1200px) {
+  .contact__map iframe {
+    height: 100%;
+  }
+}
+
+.experiences-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.experiences__title {
+  margin-bottom: 75px;
+}
+@media (min-width: 1200px) {
+  .experiences__title {
+    margin-bottom: 55px;
+  }
+}
+
+.experiences__list {
+  display: flex;
+  gap: 40px;
+  flex-direction: column;
+}
+@media (min-width: 1200px) {
+  .experiences__list {
+    flex-direction: row;
+    gap: 60px;
+  }
+}
+
+.experiences__item {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0;
+}
+@media (min-width: 1200px) {
+  .experiences__item:nth-child(2) {
+    margin-top: 50px;
+  }
+  .experiences__item:nth-child(3) {
+    margin-top: 100px;
+  }
+  .experiences__item:nth-child(4) {
+    margin-top: 150px;
+  }
+}
+
+.experiences__item-title {
+  font-size: 16px;
+  margin-bottom: 12px;
+}
+.experiences__item-title--end {
+  align-self: end;
+}
+@media (min-width: 1200px) {
+  .experiences__item-title--end {
+    align-self: start;
+  }
+}
+
+.experiences__item-title-accent {
+  font-family: var(--heading-font);
+  color: var(--accent-text-color);
+  font-size: 40px;
+  font-weight: 400;
 }/*# sourceMappingURL=main.css.map */
