--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -108,6 +108,8 @@
     }
         
     &--contact {
+
+        margin-top: 30px;
         color: var(--contact-link-color);
 
         display: flex;
