--- a/css/main.css
+++ b/css/main.css
@@ -1243,6 +1243,7 @@ body {
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
+  z-index: 3;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (max-width: 479px) {
