--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,6 +9,8 @@
     background: rgba(0, 0, 0, 0.2);
     opacity: 1;
 
+    z-index: 3;
+
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @media screen and(max-width: 479px) {
