--- a/css/main.css
+++ b/css/main.css
@@ -1560,9 +1560,59 @@ body {
   display: block;
 }
 
-.skills__skill {
+@media (min-width: 1200px) {
+  .skills__info {
+    width: 485px;
+  }
+}
+
+.skills-container {
+  display: flex;
+  gap: 40px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+@media (min-width: 1200px) {
+  .skills-container {
+    flex-direction: row-reverse;
+  }
+}
+
+.skills__title {
+  margin-bottom: 45px;
+}
+@media (min-width: 1200px) {
+  .skills__title {
+    margin-bottom: 40px;
+  }
+}
+
+.skills__text {
+  margin-bottom: 24px;
+}
+@media (min-width: 1200px) {
+  .skills__text {
+    margin-bottom: 32px;
+  }
+}
+
+.skills__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.skills__item {
   width: 160px;
   height: 160px;
+  display: flex;
+  justify-content: center;
+}
+.skills__item:nth-child(1) {
+  width: 100%;
+}
+
+.skills__skill {
   position: relative;
 }
 
@@ -1576,12 +1626,20 @@ body {
 
 .skill__inner {
   display: flex;
+  flex-direction: column;
+  gap: 5px;
   align-items: center;
   justify-content: center;
   height: 120px;
   width: 120px;
   border-radius: 50%;
   box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.2), inset -4px -4px 6px -1px rgba(255, 255, 255, 0.7), -0.5px -0.5px 0px rgb(255, 255, 255), 0.5px 0.5px 0px rgba(0, 0, 0, 0.15), 0px 12px 10px -10px rgba(0, 0, 0, 0.05);
+}
+
+.skill__header {
+  font-size: 16px;
+  font-weight: 600;
+  color: #555;
 }
 
 .skill__number {
@@ -1724,6 +1782,7 @@ body {
 
 .experiences__item-title {
   font-size: 16px;
+  font-weight: 500;
   margin-bottom: 12px;
 }
 .experiences__item-title--end {
