--- a/sass/components/_skills.scss
+++ b/sass/components/_skills.scss
@@ -1,6 +1,54 @@
-.skills__skill {
+.skills__info {
+    @include desktop {
+        width: 485px;
+    }
+}
+
+.skills-container {
+    display: flex;
+    gap: 40px;
+    flex-direction: column;
+    justify-content: space-between;
+
+    @include desktop {
+        flex-direction: row-reverse;
+    }
+}
+
+.skills__title {
+    margin-bottom: 45px;
+
+    @include desktop {
+        margin-bottom: 40px;
+    }
+}
+
+.skills__text {
+    margin-bottom: 24px;
+
+    @include desktop {
+        margin-bottom: 32px;
+    }
+}
+
+.skills__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.skills__item {
     width: 160px;
     height: 160px;
+    display: flex;
+    justify-content: center;
+    
+    &:nth-child(1) {
+        width: 100%;
+    }
+}
+
+.skills__skill {
     position: relative;
 }
 
@@ -15,6 +63,8 @@
 
 .skill__inner {
     display: flex;
+    flex-direction: column;
+    gap: 5px;
     align-items: center;
     justify-content: center;
     height: 120px;
@@ -25,6 +75,12 @@
                 -0.5px -0.5px 0px rgba(255, 255, 255, 1),
                 0.5px 0.5px 0px rgba(0, 0, 0, 0.15),
                 0px 12px 10px -10px rgba(0, 0, 0, 0.05);
+}
+
+.skill__header {
+    font-size: 16px;
+    font-weight: 600;
+    color: #555;
 }
 
 .skill__number {
@@ -53,7 +109,6 @@
 
 @keyframes anim {
     100% {
-        // stroke-dashoffset: calc(472 - (var(--data-number) * 4.72));
         stroke-dashoffset: calc(472px - (var(--data-number) * 4.72px));
     }
 }
