--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 @import './components/mob-menu';
 @import './components/pagination';
 @import './components/logo';
-@import './components/heroes/hero';
+@import './components/hero';
 @import './components/socials';
 @import './components/about';
 @import './components/stacks';
@@ -23,3 +23,4 @@
 @import './components/skills';
 @import './components/contact';
 @import './components/experiences';
+@import './components/download-link';
