--- a/css/main.css
+++ b/css/main.css
@@ -96,9 +96,9 @@ body {
   padding-left: 16px;
   padding-right: 16px;
 }
-@media (min-width: 480px) {
+@media (min-width: 375px) {
   .container {
-    width: 480px;
+    width: 375px;
   }
 }
 @media (min-width: 768px) {
@@ -254,7 +254,7 @@ body {
 .mob-menu__btn--open {
   position: absolute;
   top: 0px;
-  right: 16px;
+  right: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -425,10 +425,16 @@ body {
 }
 
 .hero__title {
-  font-size: 58px;
+  font-size: 54px;
   font-weight: regular;
   color: var(--light-title-color);
   margin-bottom: 16px;
+}
+@media (min-width: 768px) {
+  .hero__title {
+    font-size: 90px;
+    margin-bottom: 12px;
+  }
 }
 @media (min-width: 1200px) {
   .hero__title {
@@ -565,9 +571,10 @@ body {
   display: flex;
   flex-direction: column;
 }
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .about__stats {
     flex-direction: row;
+    justify-content: space-around;
   }
 }
 
@@ -581,11 +588,29 @@ body {
   margin-left: 0;
   margin-right: auto;
 }
+@media (min-width: 768px) {
+  .about__stat:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+@media (min-width: 768px) {
+  .about__stat {
+    margin-left: 0;
+  }
+}
 
 .about__stat-info {
   display: flex;
   gap: 12px;
   align-items: end;
+}
+.about__stat-info:nth-child(2) {
+  justify-content: end;
+}
+@media (min-width: 768px) {
+  .about__stat-info:nth-child(2) {
+    justify-content: start;
+  }
 }
 
 .abut__stat-text {
@@ -656,6 +681,11 @@ body {
   display: flex;
   margin-top: 40px;
   justify-content: space-between;
+}
+@media (min-width: 768px) {
+  .about-page__stats {
+    justify-content: space-around;
+  }
 }
 @media (min-width: 1200px) {
   .about-page__stats {
@@ -751,6 +781,11 @@ body {
   justify-content: center;
   margin-bottom: 48px;
 }
+@media (min-width: 768px) {
+  .stacks__list {
+    gap: 50px;
+  }
+}
 @media (min-width: 1200px) {
   .stacks__list {
     margin-bottom: 80px;
@@ -803,29 +838,6 @@ body {
   margin: 0 auto 20px auto;
 }
 
-.stacks__download-button {
-  background-color: transparent;
-  color: var(--btn-text);
-  border: none;
-  cursor: pointer;
-  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.stacks__download-button:hover {
-  transform: scale(1.1);
-}
-.stacks__download-button--modal {
-  margin-top: 15px;
-  color: var(--dark-text-color);
-  font-weight: 500;
-}
-
-.stacks__download-icon {
-  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.stacks__download-button:hover .stacks__download-icon {
-  transform: scale(1.2);
-}
-
 .service-container {
   display: flex;
   flex-direction: column;
@@ -846,9 +858,10 @@ body {
   gap: 32px;
   flex-direction: column;
 }
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .service__list {
     flex-direction: row;
+    flex-wrap: wrap;
   }
 }
 
@@ -860,6 +873,16 @@ body {
 .service__item:hover, .service__item:focus {
   color: var(--light-text-color);
   background-color: var(--active-link-color);
+}
+@media (min-width: 768px) {
+  .service__item {
+    flex-basis: calc((100% - 32px) / 2);
+  }
+}
+@media (min-width: 1200px) {
+  .service__item {
+    flex-basis: calc((100% - 96px) / 4);
+  }
 }
 
 .service__item-icon {
@@ -949,6 +972,11 @@ body {
 .portfolio__item--portfolio {
   width: 100%;
 }
+@media (min-width: 768px) {
+  .portfolio__item--portfolio {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
 @media (min-width: 1200px) {
   .portfolio__item--portfolio {
     flex-basis: calc((100% - 48px) / 3);
@@ -1022,9 +1050,13 @@ body {
   position: relative;
   padding-top: 155px;
 }
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .testimonial__content {
     padding-top: 70px;
+  }
+}
+@media (min-width: 1200px) {
+  .testimonial__content {
     display: flex;
     gap: 120px;
   }
@@ -1046,7 +1078,7 @@ body {
 }
 @media (min-width: 1200px) {
   .testimonial__wrapper {
-    width: calc(100% - 70px - 364px);
+    width: calc(100% - 484px);
     margin-top: 0;
     justify-content: space-between;
   }
@@ -1072,6 +1104,12 @@ body {
 .testimonial__title {
   position: absolute;
   top: 30px;
+}
+@media (min-width: 768px) {
+  .testimonial__title {
+    top: 240px;
+    left: 430px;
+  }
 }
 @media (min-width: 1200px) {
   .testimonial__title {
@@ -1103,7 +1141,7 @@ body {
   gap: 45px;
   flex-direction: column;
 }
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .footer-container {
     flex-direction: row;
     justify-content: space-between;
@@ -1353,7 +1391,10 @@ body {
   }
 }
 
-/* .modal-form{} */
+.modal-open {
+  overflow: hidden;
+}
+
 .modal-form__field {
   margin: 0 auto 10px auto;
   position: relative;
@@ -1473,8 +1514,11 @@ body {
   background-color: var(--btn-color-hover);
 }
 
-.questions-container {
+.questions {
   background-color: #F7F7F7;
+}
+
+.questions-container {
   padding: 64px 16px;
   display: flex;
   flex-direction: column;
@@ -1596,6 +1640,10 @@ body {
   }
 }
 
+.download-btn {
+  width: 160px;
+}
+
 .skills__list {
   display: flex;
   flex-wrap: wrap;
@@ -1682,13 +1730,18 @@ body {
   padding-top: 90px;
   padding-bottom: 10px;
 }
+@media (min-width: 768px) {
+  .contact {
+    padding-bottom: 50px;
+  }
+}
 
 .contact__columns {
   display: flex;
   flex-direction: column;
   gap: 40px;
 }
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .contact__columns {
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -1730,7 +1783,7 @@ body {
   width: 100%;
   height: 285px;
 }
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .contact__map iframe {
     height: 100%;
   }
@@ -1799,4 +1852,27 @@ body {
   color: var(--accent-text-color);
   font-size: 40px;
   font-weight: 400;
+}
+
+.download-link {
+  display: block;
+  color: var(--btn-text);
+  cursor: pointer;
+  align-self: center;
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.download-link:hover {
+  transform: scale(1.1);
+}
+.download-link--modal {
+  margin-top: 15px;
+  color: var(--dark-text-color);
+  font-weight: 500;
+}
+
+.download-icon {
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.stacks__download-button:hover .download-icon {
+  transform: scale(1.2);
 }/*# sourceMappingURL=main.css.map */
