--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -19,9 +19,6 @@
     height: 765px;
 }
 
-.hero__content {
-}
-
 .hero__greatings {
     font-size: 24px;
     font-weight: bold;
@@ -39,11 +36,17 @@
 }
 
 .hero__title {
-    font-size: 58px;
+    font-size: 54px;
     font-weight: regular;
     color: var(--light-title-color);
 
     margin-bottom: 16px;
+
+
+    @include tablet {
+        font-size: 90px;      
+        margin-bottom: 12px;  
+    }
 
     @include desktop {
         font-size: 130px;      
@@ -69,13 +72,6 @@
 
     margin-bottom: 24px;
 }
-
-.hero__social-links {}
-
-
-
-
-////////////////////////portfolio-page
 
 .alternative-hero {
     position: relative;
