--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -22,8 +22,6 @@
     flex-wrap: wrap;
 }
 
-.portfolio__filter-item {}
-
 .portfolio__filter-button {
     border: none;
     padding: 12px 16px;
@@ -70,6 +68,11 @@
 
     &--portfolio {
         width: 100%;
+
+        @include tablet {
+            flex-basis: calc((100% - 24px) / 2);
+        }
+
         @include desktop {
             flex-basis: calc((100% - 48px) / 3);
         }
