--- a/sass/components/_service.scss
+++ b/sass/components/_service.scss
@@ -1,5 +1,3 @@
-.service {}
-
 .service-container {
     display: flex;
     flex-direction: column;
@@ -19,8 +17,9 @@
     gap: 32px;
     flex-direction: column;
 
-    @include desktop {
+    @include tablet {
         flex-direction: row;
+        flex-wrap: wrap;
     }
 }
 
@@ -34,9 +33,15 @@
         color: var(--light-text-color);
         background-color: var(--active-link-color);
     }
-}
 
-.service__item-content {}
+    @include tablet {
+        flex-basis: calc((100% - 32px) / 2);
+    }
+    
+    @include desktop {
+        flex-basis: calc((100% - 96px) / 4);
+    }
+}
 
 .service__item-icon {
     margin-bottom: 24px;
@@ -61,5 +66,3 @@
         color: var(--light-title-color);
     }
 }
-
-.service__item-description {}
