--- a/sass/components/_testomonials.scss
+++ b/sass/components/_testomonials.scss
@@ -1,11 +1,12 @@
-.testimonial {}
-
 .testimonial__content {
     position: relative;
     padding-top: 155px;
 
-    @include desktop {
+    @include tablet {
         padding-top: 70px;
+    }
+
+    @include desktop {
         display: flex;
         gap: 120px;
     }
@@ -25,7 +26,7 @@
     margin-top: 40px;
 
     @include desktop {
-        width: calc(100% - 70px - 364px);
+        width: calc(100% - 484px);
         margin-top: 0;
         justify-content: space-between;
     }
@@ -51,6 +52,11 @@
 .testimonial__title {
     position: absolute;
     top: 30px;
+
+    @include tablet {
+        top: 240px;
+        left: 430px;
+    }
 
     @include desktop {
         position: static;
