development-modal-added

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,3 +24,4 @@
 @import './components/contact';
 @import './components/experiences';
 @import './components/download-link';
+@import './components/development-modal';
