main-page-content-done

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,7 +2,7 @@
     --dark-title-color: #111214;
     --light-title-color: #FFFFFF;
     --accent-title-color: #FE390C;
-    --primary-text-color: #A9A9AA;
+    --primary-text-color: #818181;
     --dark-text-color: #111214;
     --light-text-color: #FFFFFF;
     --accent-text-color: #FE390C;
