--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   --dark-title-color: #111214;
   --light-title-color: #FFFFFF;
   --accent-title-color: #FE390C;
-  --primary-text-color: #A9A9AA;
+  --primary-text-color: #818181;
   --dark-text-color: #111214;
   --light-text-color: #FFFFFF;
   --accent-text-color: #FE390C;
@@ -192,7 +192,7 @@ body {
 }
 
 .nav__link {
-  font-size: 12px;
+  font-size: 14 px;
   color: var(--nav-link-color);
   text-transform: uppercase;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -454,7 +454,7 @@ body {
 }
 
 .hero__description {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
   color: var(--light-title-color);
   margin-bottom: 24px;
@@ -599,11 +599,6 @@ body {
   }
 }
 
-.about__stat-image {
-  width: 230px;
-  height: 250px;
-}
-
 .about__stat-info {
   display: flex;
   gap: 12px;
@@ -621,7 +616,7 @@ body {
 .about__stat-text {
   color: var(--dark-text-color);
   font-family: var(--text-font);
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
   line-height: var(--secondary-text-line-height);
 }
@@ -629,7 +624,7 @@ body {
 .about__description {
   margin-left: 76px;
   font-family: var(--text-font);
-  font-size: 12px;
+  font-size: 14px;
   font-weight: var(--text-font-weight);
   line-height: var(--primary-text-line-height);
 }
@@ -828,7 +823,7 @@ body {
   color: var(--light-text-color);
   text-align: center;
   font-family: var(--heading-font);
-  font-size: 32px;
+  font-size: 26px;
   font-weight: var(--text-font-weight);
   text-transform: capitalize;
   margin-bottom: 40px;
@@ -1011,7 +1006,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 40px 24px;
+  padding: 24px 24px;
   font-size: 14px;
   line-height: 1.56;
   letter-spacing: 0.03em;
@@ -1123,6 +1118,7 @@ body {
 }
 
 .testimonial__text {
+  font-size: 14px;
   color: var(--dark-text-color);
   margin-bottom: 32px;
 }
