--- a/sass/components/_questions.scss
+++ b/sass/components/_questions.scss
@@ -90,6 +90,8 @@
     }
 
     .faq-input:checked ~&{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;    
     }
 }
