--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -24,12 +24,16 @@
 
 .portfolio__filter-button {
     border: none;
-    padding: 12px 16px;
+    padding: 10px 12px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     color: var(--primary-text-color);
     text-transform: uppercase;
     cursor: pointer;
+
+    @include desktop {
+        padding: 12px 16px;
+    }
 
     &--current {
         border: 1px solid var(--active-link-color);
@@ -58,6 +62,7 @@
     display: flex;
 
     &--portfoio {
+    justify-content: center;
     flex-wrap: wrap;
     gap: 24px;
     }
