--- a/sass/components/_download-link.scss
+++ b/sass/components/_download-link.scss
@@ -1,5 +1,8 @@
 .download-link {
     display: block;
+    font-size: 14px;
+    line-height: 1.43;
+    letter-spacing: -0.04em;
     color: var(--btn-text);
     cursor: pointer;
     align-self: center;
