--- a/sass/components/_testomonials.scss
+++ b/sass/components/_testomonials.scss
@@ -65,6 +65,9 @@
 
 .testimonial__text {
     font-size: 14px;
+    font-weight: 500;
+    line-height: 1.36;
+    letter-spacing: -0.02em;
     color: var(--dark-text-color);
     margin-bottom: 32px;
 }
