--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,6 +9,7 @@
     --placeholders-color: rgba(169, 169, 170, 0.6);
     --icons-color: #ffffff;
     --icons-background-color: rgba(255, 255, 255, 0.1);
+    --form-input-box-shadow: inset 0 0 0 50px #2e2f30;
     --btn-color: #FE390C;
     --btn-color-hover: #D82E00;
     --btn-text: #ffffff;
