--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -55,9 +55,9 @@ body {
     text-transform: uppercase;
     color: var(--dark-text-color);
     font-family: var(--heading-font);
-    font-size: 32px;
-    font-weight: var(--heading-font-weight);
-    line-height: var(--heading-line-height);
+    font-size: 40px;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .title-accent {
@@ -65,6 +65,8 @@ body {
     color: var(--accent-text-color);
     font-size: 64px;
     font-weight: 400;
+    letter-spacing: -2%;
+    line-height: normal;
 }
 
 .button {
