--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,7 +12,6 @@
 }
 
 .header-container {
-    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -36,6 +35,7 @@
 
 .nav__link {
     font-size: 14 px;
+    font-weight: 600;
     color: var(--nav-link-color);
     text-transform: uppercase;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
