--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -20,7 +20,9 @@
 
 .hero__greatings {
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 700;
+    line-height: 1.25;
+    letter-spacing: -0.04em;
     color: var(--light-title-color);
 
     margin-bottom: 16px;
@@ -35,9 +37,14 @@
 }
 
 .hero__title {
-    font-size: 54px;
-    font-weight: regular;
+    position: relative;
+    font-family: var(--heading-font);
+    font-size: 60px;
+    font-weight: 400;
+    letter-spacing: 1.5%;
+    line-height: 1.18;
     color: var(--light-title-color);
+    text-transform: uppercase;
 
     margin-bottom: 16px;
 
@@ -48,24 +55,28 @@
     }
 
     @include desktop {
-        font-size: 130px;      
+        font-size: 138px;      
         margin-bottom: 12px;  
     }
 
     &::after{
         content: "|";
-        margin-left: -4px;
-        font-weight: 100;
-        
-        @include desktop{
-            margin-left: -12px;
+        position: absolute;
+        bottom: 6px;
+        font-family: var(--text-font);
+
+        @include desktop {
+            bottom: 12px;
         }
     }
 }
 
 .hero__description {
+    font-family: var(--text-font);
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 700;
+    line-height: 1.88;
+    letter-spacing: -0.04em;
 
     color: var(--light-title-color);
 
@@ -118,7 +129,9 @@
 
 .alternative-hero__title {
     font-size: 80px;
-    font-weight: regular;
+    font-weight: 400;
+    line-height: 1.18;
+    letter-spacing: 1.5%;
     color: var(--light-title-color);
     margin: 0 auto;
 
