--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -18,8 +18,8 @@
     margin-bottom: 4px;
 
     font-weight: 400;
-    font-size: 12px;
-    line-height: calc(14 / 12);
+    font-size: 14px;
+    line-height: 1.17;
     letter-spacing: 0.01em;
 }
 
