--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -106,12 +106,12 @@
 
 .modal__title {
     display: block;
-
     margin-bottom: 12px;
 
-    font-size: 19px;
-    line-height: calc(30 / 20);
-    letter-spacing: 0.03em;
+    font-family: var(--heading-font);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
     text-align: center;
 
     color: var(--dark-title-color);
