--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -114,8 +114,8 @@
     height: 100%;
     padding: 24px 24px;
 
-    font-size: 14px;
-    line-height: 1.56;
+    font-size: 16px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     background: rgba(0, 0, 0, 0.5);
     color: var(--light-text-color);
@@ -153,7 +153,7 @@
 .portfolio__item-subtitle {
     font-family: var(--heading-font);
     font-size: 12px;
-    font-weight: var(--heading-font-weight);
+    font-weight: 400;
     color: var(--dark-title-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
