--- a/sass/components/_questions.scss
+++ b/sass/components/_questions.scss
@@ -81,8 +81,8 @@
     padding: 11px 12px 16px 12px;
     background-color: var(--primary-background-color);
 
-    font-size: 12px;
-    font-weight: medium;
+    font-size: 14px;
+    font-weight: 500;
 
     @include desktop {
         padding: 8px 24px 24px 24px;
