--- a/sass/components/_service.scss
+++ b/sass/components/_service.scss
@@ -58,7 +58,8 @@
     font-family: var(--text-font);
     font-size: 16px;
     font-weight: 700;
-    line-height: var(--primary-text-line-height);
+    line-height: 1.88;
+    letter-spacing: -0.04em;
     color: var(--dark-title-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
