--- a/sass/components/_stacks.scss
+++ b/sass/components/_stacks.scss
@@ -115,8 +115,10 @@
     color: var(--light-text-color);
     text-align: center;
     font-family: var(--heading-font);
-    font-size: 26px;
-    font-weight: var(--text-font-weight);
+    font-size: 28px;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 2%;
     text-transform: capitalize;
 
     margin-bottom: 40px;
