--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,10 +1,31 @@
 .hero {
+    margin: 0 auto;
+    max-width: 1600px;
+    height: 675px;
     background-color: var(--secondary-background-color);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(47, 48, 58, 0.1)),
-    url(../images/hero-picture.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(47, 48, 58, 0.1)),
+    url(../images/hero-tablet-1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    // @media (min-device-pixel-ratio: 2),
+    //     (min-resolution: 192dpi),
+    //     (min-resolution: 2dppx) {
+    //         background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(47, 48, 58, 0.1)),
+    //         url(../images/hero-desktop-1x.jpg);    }
+
+    @media screen and (min-width: 768px) {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(47, 48, 58, 0.1)),
+        url(../images/hero-desktop-1x.jpg);
+
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(47, 48, 58, 0.1)),
+            url(../images/hero-desktop-2x.jpg);
+        }
+    }
 }
 
 .hero-container {
